tests/neg/exports2.check
-- [E164] Declaration Error: tests/neg/exports2.scala:8:11 -------------------------------------------------------------
8 |  export A._            // error
  |           ^
  |           error overriding method f in trait B of type => String;
  |             method f of type => String cannot override since it comes from an export
